information table update

--- a/index.html
+++ b/index.html
@@ -19,47 +19,86 @@
         </ul>
     </nav>
 
-    <!-- Table of FIFA World Cup 2022 Matches -->
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Match</th>
-                <th>Location</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Nov 20, 2022</td>
-                <td>Qatar vs Ecuador</td>
-                <td>Al Bayt Stadium</td>
-            </tr>
-            <tr>
-                <td>Nov 21, 2022</td>
-                <td>England vs Iran</td>
-                <td>Khalifa Int'l Stadium</td>
-            </tr>
-            <tr>
-                <td>Nov 21, 2022</td>
-                <td>Senegal vs Netherlands</td>
-                <td>Al Thumama Stadium</td>
-            </tr>
-            <tr>
-                <td>Nov 22, 2022</td>
-                <td>Argentina vs Saudi Arabia</td>
-                <td>Lusail Stadium</td>
-            </tr>
-            <tr>
-                <td>Nov 23, 2022</td>
-                <td>Germany vs Japan</td>
-                <td>Khalifa Int'l Stadium</td>
-            </tr>
-            <tr>
-                <td>Dec 18, 2022</td>
-                <td>Final: Argentina vs France</td>
-                <td>Lusail Stadium</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <!-- Information Table on the Left -->
+        <div class="info-table">
+            <h2>World Cup 2022 Information</h2>
+            <table>
+                <tr>
+                    <th>Host Country</th>
+                    <td>Qatar</td>
+                </tr>
+                <tr>
+                    <th>Dates</th>
+                    <td>Nov 20 – Dec 18, 2022</td>
+                </tr>
+                <tr>
+                    <th>Teams</th>
+                    <td>32</td>
+                </tr>
+                <tr>
+                    <th>Champion</th>
+                    <td>Argentina</td>
+                </tr>
+                <tr>
+                    <th>Runner-Up</th>
+                    <td>France</td>
+                </tr>
+                <tr>
+                    <th>Top Scorer</th>
+                    <td>Kylian Mbappé (8 goals)</td>
+                </tr>
+                <tr>
+                    <th>Venues</th>
+                    <td>8 stadiums</td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- Table of FIFA World Cup 2022 Matches -->
+        <div class="match-table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Match</th>
+                        <th>Location</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nov 20, 2022</td>
+                        <td>Qatar vs Ecuador</td>
+                        <td>Al Bayt Stadium</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 21, 2022</td>
+                        <td>England vs Iran</td>
+                        <td>Khalifa Int'l Stadium</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 21, 2022</td>
+                        <td>Senegal vs Netherlands</td>
+                        <td>Al Thumama Stadium</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 22, 2022</td>
+                        <td>Argentina vs Saudi Arabia</td>
+                        <td>Lusail Stadium</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 23, 2022</td>
+                        <td>Germany vs Japan</td>
+                        <td>Khalifa Int'l Stadium</td>
+                    </tr>
+                    <tr>
+                        <td>Dec 18, 2022</td>
+                        <td>Final: Argentina vs France</td>
+                        <td>Lusail Stadium</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
