--- a/index.html
+++ b/index.html
@@ -24,34 +24,54 @@
         <div class="info-table">
             <h2>World Cup 2022 Information</h2>
             <table>
-                <tr>
-                    <th>Host Country</th>
-                    <td>Qatar</td>
-                </tr>
-                <tr>
-                    <th>Dates</th>
-                    <td>Nov 20 – Dec 18, 2022</td>
-                </tr>
-                <tr>
-                    <th>Teams</th>
-                    <td>32</td>
-                </tr>
-                <tr>
-                    <th>Champion</th>
-                    <td>Argentina</td>
-                </tr>
-                <tr>
-                    <th>Runner-Up</th>
-                    <td>France</td>
-                </tr>
-                <tr>
-                    <th>Top Scorer</th>
-                    <td>Kylian Mbappé (8 goals)</td>
-                </tr>
-                <tr>
-                    <th>Venues</th>
-                    <td>8 stadiums</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Information</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Host Country</td>
+                        <td>Qatar</td>
+                    </tr>
+                    <tr>
+                        <td>Dates</td>
+                        <td>Nov 20 – Dec 18, 2022</td>
+                    </tr>
+                    <tr>
+                        <td>Teams</td>
+                        <td>32</td>
+                    </tr>
+                    <tr>
+                        <td>Champion</td>
+                        <td>Argentina</td>
+                    </tr>
+                    <tr>
+                        <td>Runner-Up</td>
+                        <td>France</td>
+                    </tr>
+                    <tr>
+                        <td>Top Scorer</td>
+                        <td>Kylian Mbappé (8 goals)</td>
+                    </tr>
+                    <tr>
+                        <td>Venues</td>
+                        <td>8 stadiums</td>
+                    </tr>
+                    <tr>
+                        <td>Total Matches</td>
+                        <td>64</td>
+                    </tr>
+                    <tr>
+                        <td>Total Goals</td>
+                        <td>172</td>
+                    </tr>
+                    <tr>
+                        <td>Host Cities</td>
+                        <td>Doha, Al-Khor, Al-Wakrah, Lusail, Al-Rayyan, Al-Udeid, Madinat ash Shamal, and Umm Salal</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
 
