--- a/index.html
+++ b/index.html
@@ -86,39 +86,27 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Nov 20, 2022</td>
-                        <td>Qatar vs Ecuador</td>
-                        <td>Al Bayt Stadium</td>
-                    </tr>
-                    <tr>
-                        <td>Nov 21, 2022</td>
-                        <td>England vs Iran</td>
-                        <td>Khalifa Int'l Stadium</td>
-                    </tr>
-                    <tr>
-                        <td>Nov 21, 2022</td>
-                        <td>Senegal vs Netherlands</td>
-                        <td>Al Thumama Stadium</td>
-                    </tr>
-                    <tr>
-                        <td>Nov 22, 2022</td>
-                        <td>Argentina vs Saudi Arabia</td>
-                        <td>Lusail Stadium</td>
-                    </tr>
-                    <tr>
-                        <td>Nov 23, 2022</td>
-                        <td>Germany vs Japan</td>
-                        <td>Khalifa Int'l Stadium</td>
-                    </tr>
-                    <tr>
-                        <td>Dec 18, 2022</td>
-                        <td>Final: Argentina vs France</td>
-                        <td>Lusail Stadium</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
     </div>
+
+    <!-- Popup Container -->
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <span class="close-btn" id="close-btn">&times;</span>
+        <h2 id="popup-title"></h2>
+        <p id="popup-venue"></p>
+        <p id="popup-location"></p>
+        <p id="popup-date"></p>
+        <p id="popup-status"></p>
+        <p id="popup-attendance"></p>
+        <p id="popup-home-team"></p>
+        <p id="popup-away-team"></p>
+        <p id="popup-winner"></p>
+    </div>
+</div>
+
 </body>
+<script src="script.js"></script>
 </html>
