--- a/index.html
+++ b/index.html
@@ -71,6 +71,55 @@
                         <td>Host Cities</td>
                         <td>Doha, Al-Khor, Al-Wakrah, Lusail, Al-Rayyan, Al-Udeid, Madinat ash Shamal, and Umm Salal</td>
                     </tr>
+                    <!-- Additional Details -->
+                    <tr>
+                        <td>Final Match Date</td>
+                        <td>December 18, 2022</td>
+                    </tr>
+                    <tr>
+                        <td>Final Match Venue</td>
+                        <td>Lusail Stadium, Lusail</td>
+                    </tr>
+                    <tr>
+                        <td>Final Match Attendance</td>
+                        <td>88,966</td>
+                    </tr>
+                    <tr>
+                        <td>Stage of Final</td>
+                        <td>Final</td>
+                    </tr>
+                    <tr>
+                        <td>Winner</td>
+                        <td>Argentina</td>
+                    </tr>
+                    <tr>
+                        <td>Winner Code</td>
+                        <td>ARG</td>
+                    </tr>
+                    <tr>
+                        <td>Home Team in Final</td>
+                        <td>Argentina</td>
+                    </tr>
+                    <tr>
+                        <td>Away Team in Final</td>
+                        <td>France</td>
+                    </tr>
+                    <tr>
+                        <td>Home Team Goals in Final</td>
+                        <td>3 (Argentina)</td>
+                    </tr>
+                    <tr>
+                        <td>Away Team Goals in Final</td>
+                        <td>3 (France)</td>
+                    </tr>
+                    <tr>
+                        <td>Home Team Penalties</td>
+                        <td>4 (Argentina)</td>
+                    </tr>
+                    <tr>
+                        <td>Away Team Penalties</td>
+                        <td>2 (France)</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
